fixed browse tab css spacing issue

--- a/opus/application/static_media/css/opus.css
+++ b/opus/application/static_media/css/opus.css
@@ -111,7 +111,7 @@ body {
     margin: 0;
     padding: 0;
     background-color: #303030; /* #383838; */
-    padding-left: 0.5em;
+    padding-left: 1.5em;
 }
 
 .op-gallery-view {
